# UniversityPortfolio

./: README.md
Android Project - Entrepreneurial Programming/: Readme.md
Assembly Code - Computer Engineering/: README.md  tsiu02_lab2.txt  updated_lab2.asm  updated_lab2_again.asm  updated_lab3_again.asm  updated_lab4.asm
C - Process and Operations System Programming/: README.md  lab13questions  lab17questions  lab20questions
C# and .NET Game/: Ludo.rar  README.md  class_diagram.dia  custom exceptions.txt  dataTemplate.xml  old_diagram.dia  pseudocode.txt
C++ - Data Structures and Algorithms/: General notes  README.md
C++ - Object Oriented Programming/: README.md
C++ Game -  Object Oriented System/: README.md
C++ Game -  Object Oriented System/jocke/: Animation.h  CMakeLists.txt  Player.cpp  main.cpp
Computer Networks and Distributed Systems/: README.md
MySQL - Database Technology/: Question6.sql  README.md  lab1.txt  lab2.sql  lab4__.html  lab4_er.dia  lab4_funcdeps  lab4_funcdeps.txt  lab4a.dia  question10.txt  question8.sql  question8.txt  setup.sql  setup_func.sql  setup_tables.sql
Project Game -  Object Oriented System/: README.md  statusrapport
Python - Imperative Programming/: README.md  ThanksForEverything
Python - Math and Logic/: README.md  README.md~
Ruby - Construction of Computer Languages/: README.md
Ruby - Our Own Programming Language/: #todo#  .#todo  README.md  considerations.txt  even_older_grammatik  examplecode  grammar.txt  idea  languagediary  links  old_grammatik.txt  old_latex  rubytest.rb  semantic_analysis.txt  todo
(+640 files in other folders)
